--- a/semanticFlow.html
+++ b/semanticFlow.html
@@ -5,32 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic Flow</title>
-    <style>
-        body {
-            /* overflow: hidden;   */
-            height: 100%;
-            min-height: 100%;
-        }
+    <style>     
         html {
             height: 100%;
             min-height: 100%;
             width: 100%;
             min-width: 100%;
-            overflow: initial;
+        }
+        body {
+            height: 100%;
+            min-height: 100%;
+            width: 100%;
+            min-width: 100%; 
+            margin:0;
         }
         header {
+            /* Set minimum height and width to fix scaling size issues */
             height: 10%;
             min-height: 60px;
-            text-align: center;
+            width: 100%;
+            min-width: 100px;
+            margin: 0;
             background: lightskyblue;
             color: white;
-            font-size: 30px;
-            margin: 0;
+            font-size: 30px;  
+            /* Flex to easily center text vertically and horizontally */
+            display: flex;
+            align-items: center;
+            justify-content: center;   
         }         
-        nav {    
+        nav {  
+            /* Set minimum height and width to fix scaling size issues */
+            height: 5%;   
             min-height: 40px;  
-            height: 5%;    
-            overflow: hidden;
+            width: 100%;
+            min-width: 100px;          
+            overflow: hidden;/*Needs to be redone with media query to change the way each link is displayed*/
             background-color: grey;
             position: -webkit-sticky;
             margin: 0;          
@@ -39,8 +49,8 @@
             float: left;
             color: white;
             text-align: center;
-            padding: 14px 20px;
             text-decoration: none;
+            padding: 14px 20px;
         }
         .right { /* Right-aligned link */
             float: right;
@@ -49,102 +59,76 @@
             background-color:  #ddd;
             color: black;
         }
-        section {
-            margin-right: 10px;
-            height: 50%;
 
+        section {
             background-color: antiquewhite;
-            flex-direction: column;
-            flex-grow:1;        
-            text-align:center;
+            height: 100%;
+            width: 100%;
+            /* Flex to easily center text vertically and horizontally */
+            display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: center;       
         }
         article {
-            margin-top: 10px;
-            margin-right: 10px;
-            height: 50%;
-
             background-color: antiquewhite;
-            flex-direction: column;
-            flex-grow:1;        
-            text-align:center;
+            height: 100%;
+            width: 100%;
+            /* Flex to easily center text vertically and horizontally */
+            display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: center; 
         }
         aside {
-            padding-bottom: 10px;
-            height: 100%;
-
             background-color: antiquewhite;
-            flex-direction: column;
-            flex-grow:1;        
-            text-align:center;
+            height: 100%;
+            width: 100%;
+            /* Flex to easily center text vertically and horizontally */
+            display: flex;
             align-items: center;
             justify-content: center;    
         }
         footer {
+            /* Set minimum height and width to fix scaling size issues */
             height: 10%;
             min-height: 60px;
-            text-align: center;
+            width: 100%;   
+            min-width: 100px;         
             background: lightskyblue;
             color: white;
             font-size: 30px;
-            margin-top: 10px;
-            width: 100%;   
+            /* Flex to easily center text vertically and horizontally */
+            display: flex;
+            align-items: center;
+            justify-content: center;   
         } 
-        .leftcolumn{
-            float: left;
-            width: 70%;
+        .grid-container {
+            height: 75%;
+            width:100%;
+            min-width: 100px;
+            display: grid;
+            grid-gap: 10px;
+            grid-template-columns: auto auto auto;
+            /* Here the grid is created by using percentages of the screen each part is going to take */
+            grid-template-columns: calc(33.33% 33.33% 33.33% -10px);/*calc to remove grid gaps excess space creation on the page to the right*/
+            grid-template-rows: calc(50% 50% -10px);/*calc to remove grid gaps excess space creation on the page at the bottom*/
+        } 
+        .item1 {
+            grid-row-start: 1;
+            grid-row-end: 2;
+            grid-column-start: 1;
+            grid-column-end: 3;
         }
-        .rightcolumn{
-            float: right;
-            width: 30%;
+        .item2 {
+            grid-row-start: 2;
+            grid-row-end: 3;
+            grid-column-start: 1;
+            grid-column-end: 3;
         }
-        .row:after{
-            content: "";
-            display: table;
-            clear: both;
-        }
-        div{
-            height: 70%;
-            margin-right: 0;
-        }
-        /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-        @media screen and (max-width: 800px) {
-            .leftcolumn {  
-                height: 73.33%; 
-                width: 100%;
-                padding: 0;
-            }
-            .rightcolumn { 
-                height: 33.33%;  
-                width: 100%;
-                padding: 0;
-            }
-            aside{
-                height:33.33%;
-                padding-bottom: 0;
-                margin-top: -143px;
-            }
-            article{
-                height:33.33%;
-                margin-top: 10px;
-                margin-right: 0;
-                margin-bottom: 10px;
-            }
-            section{
-                height:33.33%;
-                margin-right: 0;
-            }
-        }
-
-        /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-        @media screen and (max-width: 400px) {
-            nav a {
-                float: none;
-                width: 100%;
-            }
+        .item3 {
+            grid-row-start: 1;
+            grid-row-end: 3;
+            grid-column-start: 3;
+            grid-column-end:4;
         }
     </style>
 <body>
@@ -155,15 +139,20 @@
         <a href="#">Navbar link 3</a>
         <a href="#" class="right">Navbar link 4(right)</a>
     </nav>
-    <div class="row">
-        <div class="leftcolumn" style="height:100%">
-            <section>Page Section</section>  
+
+    <div class="grid-container">
+        <div class="box item1">
+            <section>Page Section</section>
+        </div>
+        <div class="box item2">
             <article>Page Article</article>
         </div>
-        <div class="rightcolumn" style="height:100%">
+        <div class="box item3">
             <aside>Page Aside</aside>
-        </div>  
-    </div>  
+        </div>
+    </div>
+
+
     <footer>Page footer</footer>
 </body>
 </html>
